<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/title"
            layout="@layout/toolbar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/title"
            android:layout_marginTop="50dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/fNameLayout"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/usernameLayout"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/emailLayout"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schoolLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/contactLayout"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSchoolId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituteId"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/schoolLayout"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPasswordLayout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@+id/passwordLayout"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPass"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/schoolGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/confPasswordLayout"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="20dp">

            <RadioButton
                android:id="@+id/staffRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/radio_text"
                android:layout_marginStart="10dp"/>

            <RadioButton
                android:id="@+id/studentRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/radio_text"
                android:text="@string/student"
                android:layout_marginStart="30dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_below="@+id/schoolGroup"
            android:background="@drawable/button_design"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/btnRegister"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/txtLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blue"
                android:text="@string/login"
                android:textSize="16sp"
                />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>