<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    app:cardElevation="10dp"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/titleLayout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/add_question"
                android:paddingHorizontal="30dp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/imgCancel"
                android:layout_margin="5dp"
                android:src="@drawable/icon_cancel"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/cancel" />

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtQuestion"
            android:layout_margin="10dp"
            android:gravity="top"
            android:background="@drawable/background"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:padding="15dp"
            android:hint="@string/question" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddQuestion"
            android:text="@string/add"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:background="@drawable/button_design"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

