<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/titleLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/module"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="6"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/imgCancel"
            android:layout_margin="1dp"
            android:src="@drawable/icon_cancel"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/txtModuleCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/module_code"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/titleLayout"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:layout_marginHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@+id/txtModuleCode">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cancel"
            android:background="@drawable/button_design"
            android:textSize="9sp"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:textSize="9sp"
            android:background="@drawable/button_design"
            android:text="@string/add"
            android:layout_weight="1"/>
    </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>