<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="@color/grey">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="30dp"
        android:layout_below="@+id/txtTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10sp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_email"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/email"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_key"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioUserGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10sp">

                <RadioButton
                    android:id="@+id/radioStaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staff"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/radio_text"
                    android:layout_marginStart="10dp"/>

                <RadioButton
                    android:id="@+id/radioStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/radio_text"
                    android:text="@string/student"
                    android:layout_marginStart="30dp"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_design"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtReg"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:layout_marginHorizontal="20dp"
                android:text="@string/regAccount"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>