<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Staff.AnswerCheckActivity">

    <include
        android:id="@+id/moduleBarLayout"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_below="@+id/moduleBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/question"/>

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/titleQuestion"
            android:text="@string/question"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/titleAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtQuestion"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/answer"/>

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_below="@+id/titleAnswer"
            android:text="@string/answer"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/etResult"
            android:layout_below="@+id/txtAnswer"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:gravity="top"
            android:textSize="18sp"
            android:background="@drawable/background"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:padding="15dp"
            android:hint="@string/result" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendAnswer"
            android:background="@drawable/button_design"
            android:layout_below="@+id/etResult"
            android:layout_margin="50dp"
            android:text="@string/send"
            />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>