<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.QuestionActivity"
    android:background="@color/white">

    <include
        android:id="@+id/barLayout"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/barLayout">

        <TextView
            android:id="@+id/titleQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="22sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_below="@+id/titleQuestion"
            android:text="@string/question"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            tools:ignore="TextViewEdits" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtAnswer"
            android:layout_below="@+id/txtQuestion"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:gravity="top"
            android:textSize="18sp"
            android:background="@drawable/background"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:padding="15dp"
            android:hint="@string/answer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendAns"
            android:background="@drawable/button_design"
            android:layout_below="@+id/txtAnswer"
            android:layout_margin="50dp"
            android:text="@string/send"
            />
    </RelativeLayout>


</RelativeLayout>